# SALSA

./: .env.example  .gitignore  Makefile  README.md  banner.txt  pyproject.toml
docs/: example-photocatalysis.md
salsa/: __init__.py
salsa/core/: README.md  __init__.py  propagate.py
salsa/crystal/: README.md  __init__.py  extract_bandgap.py  instantiate_d12.py
salsa/uspex/: README.md  __init__.py  structure.py
salsa/utils/: README.md  __init__.py  collections.py  logging.py  serialization.py  timestamp.py
scripts/: CRYSTAL_status_check.sh  README.md  USPEX_status_check  compile_POTCARs_locally.sh  parse_inventory  print_bandgap_CRYSTAL.sh  reset_USPEX.sh  setup_project.sh
