[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "salsa"
version = "0.1.0"
description = "High-throughput computational materials discovery pipeline"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "ase>=3.22.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipykernel>=6.25.0",
    "jupyterlab>=4.0.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py39"
exclude = [
    ".venv",
    "data",
    "outs",
    "notebooks",
    "manuscript",
    "reference",
    "projects",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E731", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers -m 'not slow' --disable-warnings"
markers = [
    "unit: Unit tests (fast, mocked dependencies)",
    "integration: Integration tests (slower, may use real dependencies)",
    "slow: Tests that take more than 1 second",
    "hpc: Tests that require HPC environment (SLURM, etc.)",
]

[tool.coverage.run]
source = ["salsa"]
omit = ["*/tests/*", "*/__pycache__/*"]
